<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My App Portfolio"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textSize="25dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotifyAppButtonText"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            style="@style/buttonStyle"
            android:onClick="onButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoresAppButtonText"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            style="@style/buttonStyle"
            android:onClick="onButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libraryButtonText"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            style="@style/buttonStyle"
            android:onClick="onButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buildItBiggerButtonText"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            style="@style/buttonStyle"
            android:onClick="onButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyzReaderButtonText"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            style="@style/buttonStyle"
            android:onClick="onButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstoneButtonText"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:background="#FF0000"
            style="@style/buttonStyle"
            android:onClick="onButtonClicked" />
    </LinearLayout>
</RelativeLayout>
